Fix social buttons alignment

--- a/app/assets/stylesheets/globals/overwrites.scss
+++ b/app/assets/stylesheets/globals/overwrites.scss
@@ -88,8 +88,7 @@ form.navbar-nav .btn {
 #strobeMediaPlayback { width: 100%; height: 250px; }
 
 .social { margin-top: -12px; display: block; clear: both; background-color: #fff; height: 55px;}
-.twitter-share-button, .fb-share-button { float: right; }
-.fb-share-button { margin-left: -10px; }
+.twitter-share-button, .fb-share-button { float: right; margin-left: 15px; }
 
 .video { margin-bottom: 50px; }
 
